# foamToPython

./: CITATION.cff  README.md  __init__.py  pyproject.toml  readOFData.py  setup.py
readOFData/: __init__.py  headerEnd.py  readOFData.py
src/PODopenFOAM/: ofmodes.py
src/foamToPython/: __init__.py  headerEnd.py  readOFField.py  readOFList.py
src/foamToPython/PODopenFOAM/: __init__.py  ofmodes.py
src/readOFData/: __init__.py  headerEnd.py  readOFField.py  readOFList.py
