[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "foamToPython"
authors = [
    {name = "Shenhui_Ruan", email = "shenhui.ruan@kit.edu"}
]
description = "A py package to read and write OpenFOAM data"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy"
]

[tool.setuptools.packages.find]
where = ["src"]